syntax = "proto3";
package payments;

service Bitcoin {
    pub SendPayment (BTCPaymentRequest) returns (BTCPaymentResponse);
}

message BTCPaymentRequest {
    string from_addr = 1;
    string to_addr = 2;
    string amount = 3;
}

message BTCPaymentResponse {
    bool successful = 1;
    string message = 2;
}